ingore file modified for stats figures

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ data_formated_input_06262018.csv
 #powerpoint of figure 1
 fig1_powerpoint.pptx
 ~$fig1_powerpoint.pptx
+
+#stats figures from Krisitne
+means_plot.pdf
+tri_boxplot.pdf
